--- a/curations/pypi/pypi/-/azureml-dataprep-native.yaml
+++ b/curations/pypi/pypi/-/azureml-dataprep-native.yaml
@@ -5,7 +5,7 @@ coordinates:
 revisions:
   14.1.0:
     licensed:
-      declared: Other
+      declared: OTHER
   14.2.1:
     licensed:
       declared: OTHER
