--- a/curations/nuget/nuget/-/CsvHelper.yaml
+++ b/curations/nuget/nuget/-/CsvHelper.yaml
@@ -14,7 +14,7 @@ revisions:
       declared: MS-PL OR Apache-2.0
   2.15.0:
     licensed:
-      declared: MS-PL
+      declared: MS-PL OR Apache-2.0
   2.16.3:
     licensed:
       declared: MS-PL OR Apache-2.0
