--- a/curations/pypi/pypi/-/mysql-connector-python.yaml
+++ b/curations/pypi/pypi/-/mysql-connector-python.yaml
@@ -5,4 +5,4 @@ coordinates:
 revisions:
   8.0.13:
     licensed:
-      declared: GPL-2.0-only AND WITH Universal-FOSS-exception-1.0
+      declared: GPL-2.0-only WITH Universal-FOSS-exception-1.0
