--- a/curations/nuget/nuget/-/Mono.Posix.NETStandard.yaml
+++ b/curations/nuget/nuget/-/Mono.Posix.NETStandard.yaml
@@ -11,4 +11,4 @@ revisions:
       declared: MIT AND BSD-3-Clause
   5.20.1-preview:
     licensed:
-      declared: MIT
+      declared: MIT AND OTHER
