--- a/curations/git/github/dotnet/corefx.yaml
+++ b/curations/git/github/dotnet/corefx.yaml
@@ -6,4 +6,4 @@ coordinates:
 revisions:
   08f8665476e8f686bf872889a796b11dc6ed4a32:
     licensed:
-      declared: MIT
+      declared: MIT AND OTHER
