--- a/curations/git/github/dotnet/coreclr.yaml
+++ b/curations/git/github/dotnet/coreclr.yaml
@@ -6,4 +6,4 @@ coordinates:
 revisions:
   52da57d20af6c453d85e4ae05a74255485f44eee:
     licensed:
-      declared: MIT
+      declared: MIT AND OTHER
