--- a/curations/git/github/dotnet/coreclr.yaml
+++ b/curations/git/github/dotnet/coreclr.yaml
@@ -6,4 +6,4 @@ coordinates:
 revisions:
   c716068d1df2ed82e16b4d22a73397d753f8186f:
     licensed:
-      declared: MIT
+      declared: MIT AND OTHER
