--- a/curations/nuget/nuget/-/Microsoft.Azure.WebJobs.Extensions.Storage.yaml
+++ b/curations/nuget/nuget/-/Microsoft.Azure.WebJobs.Extensions.Storage.yaml
@@ -13,4 +13,4 @@ revisions:
         type: git
         url: 'https://github.com/azure/azure-webjobs-sdk/commit/2593d4f12c14c3ca609faaf90805eaa2a808c29f'
     licensed:
-      declared: MIT
+      declared: OTHER
