--- a/curations/git/github/openssh/openssh-portable.yaml
+++ b/curations/git/github/openssh/openssh-portable.yaml
@@ -6,4 +6,4 @@ coordinates:
 revisions:
   ed6bef77f5bb5b8f9ca2914478949e29f2f0a780:
     licensed:
-      declared: OTHER
+      declared: SSH-OpenSSH
