--- a/curations/maven/mavencentral/org.javassist/javassist.yaml
+++ b/curations/maven/mavencentral/org.javassist/javassist.yaml
@@ -6,7 +6,7 @@ coordinates:
 revisions:
   3.26.0-GA:
     licensed:
-      declared: (LGPL-2.1+ OR MPL-1.1) OR Apache-2.0
+      declared: MPL-1.1 OR LGPL-2.1-or-later OR Apache-2.0
   3.27.0-GA:
     licensed:
       declared: MPL-1.1 OR LGPL-2.1-or-later OR Apache-2.0
