--- a/curations/nuget/nuget/-/EPPlus.yaml
+++ b/curations/nuget/nuget/-/EPPlus.yaml
@@ -8,4 +8,4 @@ revisions:
       declared: LGPL-2.1-or-later
   5.1.0:
     licensed:
-      declared: NONE
+      declared: PolyForm-Noncommercial-1.0.0 OR OTHER
