--- a/curations/pypi/pypi/-/azureml-automl-core.yaml
+++ b/curations/pypi/pypi/-/azureml-automl-core.yaml
@@ -17,7 +17,7 @@ revisions:
       declared: OTHER
   1.12.0:
     licensed:
-      declared: Other
+      declared: OTHER
   1.2.0:
     licensed:
       declared: OTHER
