--- a/curations/nuget/nuget/-/Confluent.Kafka.yaml
+++ b/curations/nuget/nuget/-/Confluent.Kafka.yaml
@@ -41,7 +41,7 @@ revisions:
       declared: Apache-2.0 AND BSD-2-Clause
   1.0.1.1:
     licensed:
-      declared: Apache-2.0
+      declared: Apache-2.0 AND BSD-2-Clause
   1.1.0:
     licensed:
       declared: Apache-2.0 AND BSD-2-Clause
