--- a/curations/git/github/microsoft/stl.yaml
+++ b/curations/git/github/microsoft/stl.yaml
@@ -6,7 +6,7 @@ coordinates:
 revisions:
   2849d9c39f10379c7725b99011d03469dc59a280:
     licensed:
-      declared: Apache-2.0
+      declared: Apache-2.0 WITH LLVM-exception
   447f879b136950baf3ca35dfb54c359494fa2a77:
     licensed:
       declared: Apache-2.0 WITH LLVM-exception
