--- a/curations/nuget/nuget/-/Extended.Wpf.Toolkit.yaml
+++ b/curations/nuget/nuget/-/Extended.Wpf.Toolkit.yaml
@@ -8,7 +8,7 @@ revisions:
       declared: MS-PL
   2.9.0:
     licensed:
-      declared: OTHER
+      declared: MS-PL
   3.7.0:
     licensed:
       declared: OTHER
