--- a/curations/maven/mavencentral/org.jvnet.staxex/stax-ex.yaml
+++ b/curations/maven/mavencentral/org.jvnet.staxex/stax-ex.yaml
@@ -6,10 +6,10 @@ coordinates:
 revisions:
   1.7.7:
     licensed:
-      declared: CDDL-1.1 OR GPL-2.0-WITH-Classpath-exception-2.0
+      declared: CDDL-1.1 OR GPL-2.0-only WITH Classpath-exception-2.0
   '1.8':
     licensed:
-      declared: CDDL-1.1 OR GPL-2.0-with-classpath-exception
+      declared: CDDL-1.1 OR GPL-2.0-only WITH Classpath-exception-2.0
   1.8.2:
     described:
       sourceLocation:
