--- a/curations/maven/mavencentral/com.sun.istack/istack-commons-runtime.yaml
+++ b/curations/maven/mavencentral/com.sun.istack/istack-commons-runtime.yaml
@@ -6,7 +6,7 @@ coordinates:
 revisions:
   '2.21':
     licensed:
-      declared: CDDL-1.1 OR GPL-2.0-WITH-Classpath-exception-2.0
+      declared: CDDL-1.1 OR GPL-2.0-only WITH Classpath-exception-2.0
   3.0.7:
     licensed:
-      declared: CDDL-1.1 OR GPL-2.0-with-classpath-exception
+      declared: CDDL-1.1 OR GPL-2.0-only WITH Classpath-exception-2.0
