--- a/curations/git/github/fadeevab/make.tmbundle.yaml
+++ b/curations/git/github/fadeevab/make.tmbundle.yaml
@@ -6,4 +6,4 @@ coordinates:
 revisions:
   e36e02becd20730259b0115d9ca5c419f65023a9:
     licensed:
-      declared: TMate
+      declared: MIT AND OTHER
