--- a/curations/git/github/loadimpact/k6.yaml
+++ b/curations/git/github/loadimpact/k6.yaml
@@ -9,4 +9,4 @@ revisions:
       declared: AGPL-3.0-or-later
   4ee1ca9624bdd9fa68a0d534be11ac22328f1821:
     licensed:
-      declared: AGPL-3.0-only
+      declared: AGPL-3.0-or-later
