--- a/curations/maven/mavencentral/org.bouncycastle/bcprov-jdk15on.yaml
+++ b/curations/maven/mavencentral/org.bouncycastle/bcprov-jdk15on.yaml
@@ -25,13 +25,15 @@ revisions:
     licensed:
       declared: MIT
   '1.65.01':
-    sourceLocation:
-      name: bcprov-jdk15on
-      namespace: org.bouncycastle
-      provider: mavencentral
-      revision: '1.65.01'
-      type: sourcearchive
-      url: 'https://search.maven.org/remotecontent?filepath=org/bouncycastle/bcprov-jdk15on/1.65.01/bcprov-jdk15on-1.65.01-sources.jar'
+    described:
+      sourceLocation:
+        name: bcprov-jdk15on
+        namespace: org.bouncycastle
+        provider: mavencentral
+        revision: '1.65.01'
+        type: sourcearchive
+        url: >-
+          https://search.maven.org/remotecontent?filepath=org/bouncycastle/bcprov-jdk15on/1.65.01/bcprov-jdk15on-1.65.01-sources.jar
     urls:
       download: >-
         https://search.maven.org/remotecontent?filepath=org/bouncycastle/bcprov-jdk15on/1.65.01/bcprov-jdk15on-1.65.01.jar
