--- a/curations/maven/mavencentral/org.bouncycastle/bcprov-jdk15on.yaml
+++ b/curations/maven/mavencentral/org.bouncycastle/bcprov-jdk15on.yaml
@@ -26,7 +26,20 @@ revisions:
       declared: MIT
   '1.65.01':
     licensed:
-      declared: MIT    
+      declared: MIT
+    described:
+      sourceLocation:
+        name: bcprov-jdk15on
+        namespace: org.bouncycastle
+        provider: mavencentral
+        revision: '1.65.01'
+        type: sourcearchive
+        url: 'https://search.maven.org/remotecontent?filepath=org/bouncycastle/bcprov-jdk15on/1.65.01/bcprov-jdk15on-1.65.01-sources.jar'
+      urls:
+        download: >-
+          https://search.maven.org/remotecontent?filepath=org/bouncycastle/bcprov-jdk15on/1.65.01/bcprov-jdk15on-1.65.01.jar
+        registry: 'http://central.maven.org/maven2/org/bouncycastle/bcprov-jdk15on'
+        version: 'http://central.maven.org/maven2/org/bouncycastle/bcprov-jdk15on/1.65.01'   
   '1.66':
     licensed:
       declared: MIT
