--- a/curations/nuget/nuget/-/Microsoft.IdentityModel.Protocol.Extensions.yaml
+++ b/curations/nuget/nuget/-/Microsoft.IdentityModel.Protocol.Extensions.yaml
@@ -8,7 +8,7 @@ revisions:
       declared: Apache-2.0
   1.0.3.308261200:
     licensed:
-      declared: MIT
+      declared: Apache-2.0
   1.0.4.402070948:
     licensed:
       declared: MIT
