--- a/curations/maven/mavencentral/javax.interceptor/javax.interceptor-api.yaml
+++ b/curations/maven/mavencentral/javax.interceptor/javax.interceptor-api.yaml
@@ -6,4 +6,4 @@ coordinates:
 revisions:
   '1.2':
     licensed:
-      declared: CDDL-1.0 GPL-1.0-only GPL-2.0-only
+      declared: CDDL-1.1 OR GPL-2.0-only WITH Classpath-exception-2.0
