--- a/curations/maven/mavencentral/javax.el/javax.el-api.yaml
+++ b/curations/maven/mavencentral/javax.el/javax.el-api.yaml
@@ -6,4 +6,4 @@ coordinates:
 revisions:
   3.0.0:
     licensed:
-      declared: GPL-1.0-only GPL-2.0-only CDDL-1.0
+      declared: CDDL-1.1 OR GPL-2.0-only WITH Classpath-exception-2.0
