--- a/curations/maven/mavencentral/org.scala-lang/scala-library.yaml
+++ b/curations/maven/mavencentral/org.scala-lang/scala-library.yaml
@@ -6,7 +6,7 @@ coordinates:
 revisions:
   2.11.0:
     licensed:
-      declared: Apache-2.0
+      declared: BSD-3-Clause
   2.11.12:
     licensed:
       declared: BSD-3-Clause
@@ -15,4 +15,4 @@ revisions:
       declared: BSD-3-Clause
   2.12.7:
     licensed:
-      declared: Apache-2.0
+      declared: BSD-3-Clause
