--- a/curations/nuget/nuget/-/LibGit2Sharp.NativeBinaries.yaml
+++ b/curations/nuget/nuget/-/LibGit2Sharp.NativeBinaries.yaml
@@ -11,7 +11,7 @@ revisions:
       declared: GPL-2.0-only WITH OTHER
   2.0.263:
     licensed:
-      declared: MIT
+      declared: GPL-2.0-only WITH OTHER
   2.0.267:
     licensed:
       declared: GPL-2.0-only WITH OTHER
