--- a/curations/nuget/nuget/-/Microsoft.DotNet.PlatformAbstractions.yaml
+++ b/curations/nuget/nuget/-/Microsoft.DotNet.PlatformAbstractions.yaml
@@ -8,7 +8,7 @@ revisions:
       declared: MIT
   1.1.0:
     licensed:
-      declared: NONE
+      declared: MIT
   1.1.2:
     licensed:
       declared: MIT
