--- a/curations/nuget/nuget/-/LibGit2Sharp.NativeBinaries.yaml
+++ b/curations/nuget/nuget/-/LibGit2Sharp.NativeBinaries.yaml
@@ -17,7 +17,7 @@ revisions:
       declared: GPL-2.0-only WITH OTHER
   2.0.298:
     licensed:
-      declared: MIT
+      declared: GPL-2.0-only WITH OTHER
   2.0.306:
     licensed:
       declared: GPL-2.0-only WITH OTHER
