--- a/curations/nuget/nuget/-/SonarAnalyzer.CSharp.yaml
+++ b/curations/nuget/nuget/-/SonarAnalyzer.CSharp.yaml
@@ -11,7 +11,7 @@ revisions:
       declared: LGPL-3.0-or-later
   8.12.0.21095:
     licensed:
-      declared: GPL-3.0
+      declared: LGPL-3.0-or-later
   8.4.0.15306:
     licensed:
       declared: LGPL-3.0-or-later
