--- a/curations/nuget/nuget/-/CsvHelper.yaml
+++ b/curations/nuget/nuget/-/CsvHelper.yaml
@@ -11,7 +11,7 @@ revisions:
       declared: MS-PL OR Apache-2.0
   2.13.0:
     licensed:
-      declared: MS-PL
+      declared: MS-PL OR Apache-2.0
   2.13.2:
     licensed:
       declared: MS-PL OR Apache-2.0
