--- a/curations/nuget/nuget/-/angularjs.yaml
+++ b/curations/nuget/nuget/-/angularjs.yaml
@@ -5,7 +5,7 @@ coordinates:
 revisions:
   1.5.0:
     licensed:
-      declared: MS-PL
+      declared: MIT
   1.5.5:
     licensed:
       declared: MIT
