--- a/curations/npm/npmjs/-/doctrine.yaml
+++ b/curations/npm/npmjs/-/doctrine.yaml
@@ -9,3 +9,7 @@ revisions:
   1.5.0:
     licensed:
       declared: BSD-2-Clause
+  2.1.0:
+    files:
+      - license: NONE
+        path: package/CHANGELOG.md
