--- a/curations/maven/mavencentral/com.github.rwl/jtransforms.yaml
+++ b/curations/maven/mavencentral/com.github.rwl/jtransforms.yaml
@@ -6,4 +6,4 @@ coordinates:
 revisions:
   2.4.0:
     licensed:
-      declared: GPL-2.0-with-classpath-exception
+      declared: MPL-1.1 OR GPL-2.0-or-later OR LGPL-2.1-or-later
