--- a/curations/git/github/nkokla/jquery.universal-smartbanner.yaml
+++ b/curations/git/github/nkokla/jquery.universal-smartbanner.yaml
@@ -6,4 +6,4 @@ coordinates:
 revisions:
   6c38198b1119a43a937ff3523c4c3af0221a8e3c:
     licensed:
-      declared: MIT
+      declared: Apache-2.0 AND MIT
