--- a/curations/nuget/nuget/-/LibGit2Sharp.NativeBinaries.yaml
+++ b/curations/nuget/nuget/-/LibGit2Sharp.NativeBinaries.yaml
@@ -8,7 +8,7 @@ revisions:
       declared: GPL-2.0-only WITH OTHER
   1.0.185:
     licensed:
-      declared: GPL-2.0-with-GCC-exception
+      declared: GPL-2.0-only WITH OTHER
   1.0.81:
     licensed:
       declared: GPL-2.0-only WITH OTHER
