--- a/curations/nuget/nuget/-/StyleCop.yaml
+++ b/curations/nuget/nuget/-/StyleCop.yaml
@@ -5,7 +5,7 @@ coordinates:
 revisions:
   4.7.49:
     licensed:
-      declared: OTHER
+      declared: MS-PL
   5.0.0:
     licensed:
       declared: MS-PL
