--- a/curations/maven/mavencentral/com.sun.activation/javax.activation.yaml
+++ b/curations/maven/mavencentral/com.sun.activation/javax.activation.yaml
@@ -6,4 +6,4 @@ coordinates:
 revisions:
   1.2.0:
     licensed:
-      declared: GPL-2.0-with-classpath-exception OR CDDL-1.0
+      declared: CDDL-1.1 OR GPL-2.0-only WITH Classpath-exception-2.0
