--- a/curations/nuget/nuget/-/bootstrap.yaml
+++ b/curations/nuget/nuget/-/bootstrap.yaml
@@ -5,10 +5,10 @@ coordinates:
 revisions:
   3.0.0:
     licensed:
-      declared: Apache-2.0
+      declared: MIT
   3.3.1:
     licensed:
-      declared: Apache-2.0
+      declared: MIT
   3.3.2:
     licensed:
       declared: MIT
