--- a/curations/pypi/pypi/-/azureml-core.yaml
+++ b/curations/pypi/pypi/-/azureml-core.yaml
@@ -5,7 +5,7 @@ coordinates:
 revisions:
   1.0.18:
     licensed:
-      declared: MS-PL
+      declared: OTHER
   1.0.39:
     licensed:
       declared: OTHER
