--- a/curations/nuget/nuget/-/Confluent.Kafka.yaml
+++ b/curations/nuget/nuget/-/Confluent.Kafka.yaml
@@ -47,7 +47,7 @@ revisions:
       declared: Apache-2.0 AND BSD-2-Clause
   1.2.1:
     licensed:
-      declared: Apache-2.0
+      declared: Apache-2.0 AND BSD-2-Clause
   1.2.2:
     licensed:
       declared: Apache-2.0 AND BSD-2-Clause
