--- a/curations/nuget/nuget/-/protobuf-net.yaml
+++ b/curations/nuget/nuget/-/protobuf-net.yaml
@@ -11,7 +11,7 @@ revisions:
       declared: Apache-2.0 AND BSD-3-Clause
   2.3.17:
     licensed:
-      declared: Apache-2.0
+      declared: Apache-2.0 AND BSD-3-Clause
   2.3.2:
     licensed:
       declared: Apache-2.0 AND BSD-3-Clause
