--- a/curations/git/github/p0f/p0f.yaml
+++ b/curations/git/github/p0f/p0f.yaml
@@ -6,4 +6,4 @@ coordinates:
 revisions:
   4abbd20ecd7421461e360c77a98dff98e08a8b10:
     licensed:
-      declared: LGPL-3.0
+      declared: LGPL-2.1-only
