--- a/curations/git/github/golang/sys.yaml
+++ b/curations/git/github/golang/sys.yaml
@@ -6,4 +6,4 @@ coordinates:
 revisions:
   a5b02f93d862f065920dd6a40dddc66b60d0dec4:
     licensed:
-      declared: BSD-3-Clause
+      declared: BSD-3-Clause AND OTHER
