--- a/curations/git/github/golang/net.yaml
+++ b/curations/git/github/golang/net.yaml
@@ -6,4 +6,4 @@ coordinates:
 revisions:
   d8887717615a059821345a5c23649351b52a1c0b:
     licensed:
-      declared: BSD-3-Clause
+      declared: BSD-3-Clause AND OTHER
