--- a/curations/git/github/golang/crypto.yaml
+++ b/curations/git/github/golang/crypto.yaml
@@ -6,4 +6,4 @@ coordinates:
 revisions:
   e3636079e1a4c1f337f212cc5cd2aca108f6c900:
     licensed:
-      declared: BSD-3-Clause
+      declared: BSD-3-Clause AND OTHER
