--- a/curations/nuget/nuget/-/7-Zip.CommandLine.yaml
+++ b/curations/nuget/nuget/-/7-Zip.CommandLine.yaml
@@ -8,4 +8,4 @@ revisions:
       declared: LGPL-2.1-or-later
   9.20.0:
     licensed:
-      declared: LGPL-2.1+
+      declared: LGPL-2.1-or-later
