--- a/curations/nuget/nuget/-/xunit.runner.utility.yaml
+++ b/curations/nuget/nuget/-/xunit.runner.utility.yaml
@@ -5,7 +5,7 @@ coordinates:
 revisions:
   2.4.0:
     licensed:
-      declared: MIT
+      declared: Apache-2.0
   2.4.1:
     licensed:
       declared: Apache-2.0
