--- a/curations/nuget/nuget/-/boost.yaml
+++ b/curations/nuget/nuget/-/boost.yaml
@@ -5,13 +5,13 @@ coordinates:
 revisions:
   1.63.0:
     licensed:
-      declared: BSL-1.0
+      declared: Apache-2.0
   1.65.0:
     licensed:
       declared: Apache-2.0
   1.67.0:
     licensed:
-      declared: BSL-1.0
+      declared: Apache-2.0
   1.68.0:
     licensed:
       declared: Apache-2.0
