--- a/curations/pypi/pypi/-/pyblake2.yaml
+++ b/curations/pypi/pypi/-/pyblake2.yaml
@@ -5,4 +5,4 @@ coordinates:
 revisions:
   1.1.2:
     licensed:
-      declared: WTFPL
+      declared: OTHER OR CC0-1.0 OR Unlicense OR WFTPL OR Apache-2.0 OR OpenSSL OR MIT OR BSD-3-Clause OR ISC
