--- a/curations/maven/mavencentral/com.google.errorprone/javac-shaded.yaml
+++ b/curations/maven/mavencentral/com.google.errorprone/javac-shaded.yaml
@@ -6,4 +6,4 @@ coordinates:
 revisions:
   9-dev-r4023-3:
     licensed:
-      declared: GPL-2.0-with-classpath-exception
+      declared: GPL-2.0-only WITH Classpath-exception-2.0
