--- a/curations/git/github/xamarin/sqlite.yaml
+++ b/curations/git/github/xamarin/sqlite.yaml
@@ -6,4 +6,4 @@ coordinates:
 revisions:
   1a3276b8853d695c96c9c5be3d4ff752e67a1d6f:
     licensed:
-      declared: Apache-2.0
+      declared: Apache-2.0 AND blessing
