--- a/curations/nuget/nuget/-/Ninject.Web.Common.yaml
+++ b/curations/nuget/nuget/-/Ninject.Web.Common.yaml
@@ -8,4 +8,4 @@ revisions:
       declared: Apache-2.0 OR MS-PL
   3.2.3:
     licensed:
-      declared: Apache-2.0
+      declared: Apache-2.0 OR MS-PL
