--- a/curations/nuget/nuget/-/IKVM.yaml
+++ b/curations/nuget/nuget/-/IKVM.yaml
@@ -5,7 +5,7 @@ coordinates:
 revisions:
   7.4.5196:
     licensed:
-      declared: NONE
+      declared: Zlib
   8.1.5717:
     licensed:
-      declared: Zlib AND GPL-2.0-with-classpath-exception
+      declared: Zlib
