--- a/curations/npm/npmjs/-/jsbn.yaml
+++ b/curations/npm/npmjs/-/jsbn.yaml
@@ -5,7 +5,7 @@ coordinates:
 revisions:
   0.0.0:
     licensed:
-      declared: MIT
+      declared: OTHER
   0.1.0:
     licensed:
       declared: OTHER
