--- a/curations/git/github/mysql/mysql-server.yaml
+++ b/curations/git/github/mysql/mysql-server.yaml
@@ -6,4 +6,4 @@ coordinates:
 revisions:
   7d10c82196c8e45554f27c00681474a9fb86d137:
     licensed:
-      declared: GPL-2.0-or-later
+      declared: GPL-2.0-only
