--- a/curations/nuget/nuget/-/Hangfire.Core.yaml
+++ b/curations/nuget/nuget/-/Hangfire.Core.yaml
@@ -5,7 +5,7 @@ coordinates:
 revisions:
   1.6.19:
     licensed:
-      declared: LGPL-3.0
+      declared: LGPL-3.0-or-later OR OTHER
   1.7.12:
     licensed:
       declared: LGPL-3.0-or-later OR OTHER
