--- a/curations/nuget/nuget/-/DocumentFormat.OpenXml.yaml
+++ b/curations/nuget/nuget/-/DocumentFormat.OpenXml.yaml
@@ -5,7 +5,7 @@ coordinates:
 revisions:
   2.5.0:
     licensed:
-      declared: MIT
+      declared: Apache-2.0
   2.7.2:
     licensed:
       declared: Apache-2.0
