--- a/curations/nuget/nuget/-/MySql.Data.yaml
+++ b/curations/nuget/nuget/-/MySql.Data.yaml
@@ -5,4 +5,4 @@ coordinates:
 revisions:
   8.0.21:
     licensed:
-      declared: GPL-2.0-only
+      declared: GPL-2.0-only WITH (OTHER AND Universal-FOSS-exception-1.0)
