--- a/curations/maven/mavencentral/org.glassfish.jaxb/txw2.yaml
+++ b/curations/maven/mavencentral/org.glassfish.jaxb/txw2.yaml
@@ -12,4 +12,4 @@ revisions:
       declared: CDDL-1.1 OR GPL-2.0-only WITH Classpath-exception-2.0
   2.3.2:
     licensed:
-      declared: EPL-1.0
+      declared: BSD-3-Clause
