--- a/curations/maven/mavencentral/org.glassfish/javax.el.yaml
+++ b/curations/maven/mavencentral/org.glassfish/javax.el.yaml
@@ -9,4 +9,4 @@ revisions:
       declared: GPL-2.0-only OR CDDL-1.1
   3.0.1-b08:
     licensed:
-      declared: CDDL-1.1 OR GPL-2.0-with-classpath-exception
+      declared: CDDL-1.1 OR GPL-2.0-only WITH Classpath-exception-2.0
