--- a/curations/nuget/nuget/-/Bogus.yaml
+++ b/curations/nuget/nuget/-/Bogus.yaml
@@ -8,7 +8,7 @@ revisions:
       declared: MIT
   29.0.2:
     licensed:
-      declared: MIT AND BSD-3-Clause
+      declared: MIT 
   30.0.2:
     licensed:
       declared: MIT
