--- a/curations/nuget/nuget/-/StyleCop.Analyzers.yaml
+++ b/curations/nuget/nuget/-/StyleCop.Analyzers.yaml
@@ -31,7 +31,7 @@ revisions:
       declared: Apache-2.0
   1.1.0-beta007:
     licensed:
-      declared: MIT
+      declared: Apache-2.0
   1.1.0-beta008:
     licensed:
       declared: Apache-2.0
