--- a/curations/nuget/nuget/-/Yarnpkg.Yarn.yaml
+++ b/curations/nuget/nuget/-/Yarnpkg.Yarn.yaml
@@ -8,4 +8,4 @@ revisions:
       declared: BSD-2-Clause
   1.5.1:
     licensed:
-      declared: BSD-2-Clause-FreeBSD
+      declared: BSD-2-Clause
