--- a/curations/maven/mavencentral/javax.mail/mailapi.yaml
+++ b/curations/maven/mavencentral/javax.mail/mailapi.yaml
@@ -6,4 +6,4 @@ coordinates:
 revisions:
   1.4.3:
     licensed:
-      declared: GPL-2.0-with-classpath-exception
+      declared: CDDL-1.0 OR GPL-2.0-only WITH Classpath-exception-2.0
