--- a/curations/git/github/fmtlib/fmt.yaml
+++ b/curations/git/github/fmtlib/fmt.yaml
@@ -14,4 +14,4 @@ revisions:
       declared: MIT OR OTHER
   f19b1a521ee8b606dedcadfda69fd10ddf882753:
     licensed:
-      declared: MIT
+      declared: MIT OR OTHER
