--- a/curations/nuget/nuget/-/Ninject.yaml
+++ b/curations/nuget/nuget/-/Ninject.yaml
@@ -11,7 +11,7 @@ revisions:
       declared: Apache-2.0 OR MS-PL
   3.3.2-beta1:
     licensed:
-      declared: Apache-2.0
+      declared: Apache-2.0 OR MS-PL
   3.3.3:
     files:
       - attributions:
