--- a/curations/nuget/nuget/-/Ninject.Extensions.Factory.yaml
+++ b/curations/nuget/nuget/-/Ninject.Extensions.Factory.yaml
@@ -8,4 +8,4 @@ revisions:
       declared: Apache-2.0 OR MS-PL
   3.2.2-unstable-002:
     licensed:
-      declared: Apache-2.0
+      declared: Apache-2.0 OR MS-PL
