--- a/curations/nuget/nuget/-/Hangfire.Core.yaml
+++ b/curations/nuget/nuget/-/Hangfire.Core.yaml
@@ -11,4 +11,4 @@ revisions:
       declared: LGPL-3.0-or-later OR OTHER
   1.7.14:
     licensed:
-      declared: LGPL-3.0
+      declared: LGPL-3.0-or-later OR OTHER
