--- a/curations/nuget/nuget/-/Rx-Linq.yaml
+++ b/curations/nuget/nuget/-/Rx-Linq.yaml
@@ -8,7 +8,7 @@ revisions:
       declared: Apache-2.0
   2.2.0:
     licensed:
-      declared: MIT
+      declared: Apache-2.0
   2.2.2:
     licensed:
       declared: Apache-2.0
