--- a/curations/nuget/nuget/-/AngleSharp.yaml
+++ b/curations/nuget/nuget/-/AngleSharp.yaml
@@ -8,7 +8,7 @@ revisions:
       declared: MIT
   0.12.1:
     licensed:
-      declared: NONE
+      declared: MIT
   0.13.0:
     licensed:
       declared: MIT
