--- a/curations/pypi/pypi/-/azureml-dataprep.yaml
+++ b/curations/pypi/pypi/-/azureml-dataprep.yaml
@@ -8,7 +8,7 @@ revisions:
       declared: OTHER
   1.8.2:
     licensed:
-      declared: Other
+      declared: OTHER
   1.9.2:
     licensed:
       declared: OTHER
