--- a/curations/pypi/pypi/-/azureml-dataprep.yaml
+++ b/curations/pypi/pypi/-/azureml-dataprep.yaml
@@ -5,7 +5,7 @@ coordinates:
 revisions:
   1.4.3:
     licensed:
-      declared: Other
+      declared: OTHER
   1.6.3:
     licensed:
       declared: OTHER
