--- a/curations/nuget/nuget/-/SpecRun.Runner.yaml
+++ b/curations/nuget/nuget/-/SpecRun.Runner.yaml
@@ -5,7 +5,7 @@ coordinates:
 revisions:
   1.8.5:
     licensed:
-      declared: NONE
+      declared: OTHER
   3.4.5:
     licensed:
-      declared: BSD-3-Clause
+      declared: OTHER
