--- a/curations/nuget/nuget/-/Ninject.Web.Common.yaml
+++ b/curations/nuget/nuget/-/Ninject.Web.Common.yaml
@@ -8,7 +8,7 @@ revisions:
       declared: Apache-2.0 OR MS-PL
   3.2.2:
     licensed:
-      declared: Apache-2.0
+      declared: Apache-2.0 OR MS-PL
   3.2.3:
     licensed:
       declared: Apache-2.0 OR MS-PL
