--- a/curations/pypi/pypi/-/azureml-defaults.yaml
+++ b/curations/pypi/pypi/-/azureml-defaults.yaml
@@ -8,7 +8,7 @@ revisions:
       declared: OTHER
   1.13.0:
     licensed:
-      declared: MS-PL
+      declared: OTHER
   1.6.0:
     licensed:
       declared: OTHER
