--- a/curations/pypi/pypi/-/azureml-core.yaml
+++ b/curations/pypi/pypi/-/azureml-core.yaml
@@ -29,7 +29,7 @@ revisions:
       declared: OTHER
   1.6.0:
     licensed:
-      declared: Other
+      declared: OTHER
   1.6.0.post1:
     licensed:
       declared: OTHER
