--- a/curations/pypi/pypi/-/azureml-train-automl-client.yaml
+++ b/curations/pypi/pypi/-/azureml-train-automl-client.yaml
@@ -32,7 +32,7 @@ revisions:
       declared: OTHER
   1.13.0.post2:
     licensed:
-      declared: MS-PL
+      declared: OTHER
   1.2.0:
     licensed:
       declared: OTHER
