--- a/curations/pypi/pypi/-/azureml-automl-runtime.yaml
+++ b/curations/pypi/pypi/-/azureml-automl-runtime.yaml
@@ -8,7 +8,7 @@ revisions:
       declared: OTHER
   1.13.0.post1:
     licensed:
-      declared: Other
+      declared: OTHER
   1.15.0:
     licensed:
       declared: OTHER
