--- a/curations/pypi/pypi/-/azureml-automl-runtime.yaml
+++ b/curations/pypi/pypi/-/azureml-automl-runtime.yaml
@@ -5,7 +5,7 @@ coordinates:
 revisions:
   1.11.0:
     licensed:
-      declared: Other
+      declared: OTHER
   1.12.0:
     licensed:
       declared: OTHER
