--- a/curations/git/github/dotnet/coreclr.yaml
+++ b/curations/git/github/dotnet/coreclr.yaml
@@ -6,7 +6,7 @@ coordinates:
 revisions:
   36f70fa4be4bd37d4d76d06dd2cc433ff46351bd:
     licensed:
-      declared: MIT
+      declared: MIT AND OTHER
   52da57d20af6c453d85e4ae05a74255485f44eee:
     licensed:
       declared: MIT AND OTHER
