--- a/curations/git/github/dotnet/coreclr.yaml
+++ b/curations/git/github/dotnet/coreclr.yaml
@@ -6,7 +6,7 @@ coordinates:
 revisions:
   1ed7226e39b7214807318d2cc8ff37492527ffa1:
     licensed:
-      declared: MIT
+      declared: MIT AND OTHER
   52da57d20af6c453d85e4ae05a74255485f44eee:
     licensed:
       declared: MIT AND OTHER
