--- a/curations/git/github/dotnet/corefx.yaml
+++ b/curations/git/github/dotnet/corefx.yaml
@@ -9,4 +9,4 @@ revisions:
       declared: MIT AND OTHER
   8808e3e7f9749a168f86180496d6ea0f8e159db2:
     licensed:
-      declared: MIT
+      declared: MIT AND OTHER
