--- a/curations/git/github/dotnet/corefx.yaml
+++ b/curations/git/github/dotnet/corefx.yaml
@@ -9,4 +9,4 @@ revisions:
       declared: MIT AND OTHER
   8321c729934c0f8be754953439b88e6e1c120c24:
     licensed:
-      declared: MIT
+      declared: MIT AND OTHER
