--- a/curations/nuget/nuget/-/Confluent.Kafka.yaml
+++ b/curations/nuget/nuget/-/Confluent.Kafka.yaml
@@ -23,7 +23,7 @@ revisions:
       declared: Apache-2.0 AND BSD-2-Clause
   0.9.5:
     licensed:
-      declared: Apache-2.0
+      declared: Apache-2.0 AND BSD-2-Clause
   1.0.0:
     licensed:
       declared: Apache-2.0 AND BSD-2-Clause
