--- a/curations/nuget/nuget/-/NUglify.yaml
+++ b/curations/nuget/nuget/-/NUglify.yaml
@@ -5,7 +5,7 @@ coordinates:
 revisions:
   1.5.1:
     licensed:
-      declared: Apache-2.0
+      declared: BSD-2-Clause
   1.5.12:
     licensed:
       declared: BSD-2-Clause
