--- a/curations/nuget/nuget/-/MySql.Data.yaml
+++ b/curations/nuget/nuget/-/MySql.Data.yaml
@@ -5,7 +5,7 @@ coordinates:
 revisions:
   8.0.19:
     licensed:
-      declared: GPL-2.0
+      declared: GPL-2.0-only WITH (OTHER AND Universal-FOSS-exception-1.0)
   8.0.21:
     licensed:
       declared: GPL-2.0-only WITH (OTHER AND Universal-FOSS-exception-1.0)
