--- a/curations/nuget/nuget/-/xunit.runner.visualstudio.yaml
+++ b/curations/nuget/nuget/-/xunit.runner.visualstudio.yaml
@@ -23,7 +23,7 @@ revisions:
       declared: Apache-2.0
   2.3.0:
     licensed:
-      declared: MIT
+      declared: Apache-2.0
   2.3.0-beta4-build3742:
     licensed:
       declared: Apache-2.0
