--- a/curations/nuget/nuget/-/Selenium.Chrome.WebDriver.yaml
+++ b/curations/nuget/nuget/-/Selenium.Chrome.WebDriver.yaml
@@ -5,7 +5,7 @@ coordinates:
 revisions:
   2.30.0:
     licensed:
-      declared: MIT
+      declared: Unlicense
   2.33.0:
     licensed:
       declared: Unlicense
