--- a/curations/nuget/nuget/-/SonarAnalyzer.CSharp.yaml
+++ b/curations/nuget/nuget/-/SonarAnalyzer.CSharp.yaml
@@ -17,7 +17,7 @@ revisions:
       declared: LGPL-3.0-or-later
   8.13.1.21947:
     licensed:
-      declared: LGPL-3.0
+      declared: LGPL-3.0-or-later
   8.4.0.15306:
     licensed:
       declared: LGPL-3.0-or-later
