--- a/curations/git/github/protobuf-c/protobuf-c.yaml
+++ b/curations/git/github/protobuf-c/protobuf-c.yaml
@@ -6,4 +6,4 @@ coordinates:
 revisions:
   1390409f4ee4e26d0635310995b516eb702c3f9e:
     licensed:
-      declared: other
+      declared: BSD-2-Clause
