--- a/curations/nuget/nuget/-/Selenium.WebDriver.IEDriver.yaml
+++ b/curations/nuget/nuget/-/Selenium.WebDriver.IEDriver.yaml
@@ -8,7 +8,7 @@ revisions:
       declared: Unlicense
   3.141.59:
     licensed:
-      declared: MPL-2.0
+      declared: Unlicense
   3.150.1:
     licensed:
       declared: Unlicense
