--- a/curations/nuget/nuget/-/ClosedXML.yaml
+++ b/curations/nuget/nuget/-/ClosedXML.yaml
@@ -8,7 +8,7 @@ revisions:
       declared: MIT
   0.88.0:
     licensed:
-      declared: GPL-3.0
+      declared: MIT
   0.94.2:
     licensed:
       declared: MIT
