--- a/curations/pypi/pypi/-/azureml-automl-core.yaml
+++ b/curations/pypi/pypi/-/azureml-automl-core.yaml
@@ -29,7 +29,7 @@ revisions:
       declared: OTHER
   1.16.0:
     licensed:
-      declared: NONE
+      declared: OTHER
   1.2.0:
     licensed:
       declared: OTHER
