--- a/curations/pypi/pypi/-/azureml-core.yaml
+++ b/curations/pypi/pypi/-/azureml-core.yaml
@@ -38,7 +38,7 @@ revisions:
       declared: OTHER
   1.16.0:
     licensed:
-      declared: NONE
+      declared: OTHER
   1.6.0:
     licensed:
       declared: OTHER
