--- a/curations/npm/npmjs/@microsoft/sp-office-ui-fabric-core.yaml
+++ b/curations/npm/npmjs/@microsoft/sp-office-ui-fabric-core.yaml
@@ -9,7 +9,7 @@ revisions:
       declared: OTHER
   1.11.0:
     licensed:
-      declared: Other
+      declared: OTHER
   1.9.1:
     licensed:
       declared: OTHER
