--- a/curations/pypi/pypi/-/azureml-core.yaml
+++ b/curations/pypi/pypi/-/azureml-core.yaml
@@ -20,7 +20,7 @@ revisions:
       declared: OTHER
   1.10.0.post1:
     licensed:
-      declared: Other
+      declared: OTHER
   1.11.0:
     licensed:
       declared: OTHER
