--- a/curations/nuget/nuget/-/Ninject.MVC5.yaml
+++ b/curations/nuget/nuget/-/Ninject.MVC5.yaml
@@ -8,4 +8,4 @@ revisions:
       declared: Apache-2.0 OR MS-PL
   3.3.0:
     licensed:
-      declared: Apache-2.0
+      declared: Apache-2.0 OR MS-PL
