--- a/curations/pypi/pypi/-/azureml-telemetry.yaml
+++ b/curations/pypi/pypi/-/azureml-telemetry.yaml
@@ -17,13 +17,13 @@ revisions:
       declared: OTHER
   1.10.0:
     licensed:
-      declared: Other
+      declared: OTHER
   1.11.0:
     licensed:
       declared: OTHER
   1.12.0:
     licensed:
-      declared: Other
+      declared: OTHER
   1.13.0:
     licensed:
       declared: OTHER
