--- a/curations/maven/mavencentral/org.ow2.asm/asm.yaml
+++ b/curations/maven/mavencentral/org.ow2.asm/asm.yaml
@@ -20,7 +20,7 @@ revisions:
       declared: BSD-3-Clause
   '6.2':
     licensed:
-      declared: Apache-2.0
+      declared: BSD-3-Clause
   '7.0':
     licensed:
       declared: BSD-3-Clause
