--- a/curations/npm/npmjs/@progress/kendo-ooxml.yaml
+++ b/curations/npm/npmjs/@progress/kendo-ooxml.yaml
@@ -9,7 +9,7 @@ revisions:
       declared: OTHER
   1.3.0:
     licensed:
-      declared: Apache-2.0
+      declared: OTHER
   1.4.2:
     licensed:
       declared: OTHER
