--- a/curations/npm/npmjs/@progress/kendo-drawing.yaml
+++ b/curations/npm/npmjs/@progress/kendo-drawing.yaml
@@ -6,7 +6,7 @@ coordinates:
 revisions:
   1.5.12:
     licensed:
-      declared: Apache-2.0
+      declared: OTHER
   1.6.0:
     licensed:
       declared: OTHER
