--- a/curations/npm/npmjs/@progress/kendo-charts.yaml
+++ b/curations/npm/npmjs/@progress/kendo-charts.yaml
@@ -6,7 +6,7 @@ coordinates:
 revisions:
   1.13.2:
     licensed:
-      declared: Apache-2.0
+      declared: OTHER
   1.14.2:
     licensed:
       declared: OTHER
