--- a/.github/workflows/label-merge-conflicts.yml
+++ b/.github/workflows/label-merge-conflicts.yml
@@ -8,6 +8,7 @@ jobs:
   triage:
     runs-on: ubuntu-latest
     steps:
+      - run: sleep 300
       - uses: mschilde/auto-label-merge-conflicts@master
         with:
           CONFLICT_LABEL_NAME: 'has conflicts'
