--- a/curations/nuget/nuget/-/NSubstitute.yaml
+++ b/curations/nuget/nuget/-/NSubstitute.yaml
@@ -26,7 +26,7 @@ revisions:
       declared: BSD-3-Clause
   3.0.1:
     licensed:
-      declared: BSD-2-Clause-FreeBSD
+      declared: BSD-3-Clause
   3.1.0:
     licensed:
       declared: BSD-3-Clause
