--- a/curations/nuget/nuget/-/SonarAnalyzer.CSharp.yaml
+++ b/curations/nuget/nuget/-/SonarAnalyzer.CSharp.yaml
@@ -5,7 +5,7 @@ coordinates:
 revisions:
   1.22.0.1631:
     licensed:
-      declared: GPL-3.0
+      declared: LGPL-3.0-or-later
   6.6.0.3969:
     licensed:
       declared: LGPL-3.0-or-later
