--- a/curations/npm/npmjs/@progress/kendo-react-dropdowns.yaml
+++ b/curations/npm/npmjs/@progress/kendo-react-dropdowns.yaml
@@ -6,7 +6,7 @@ coordinates:
 revisions:
   3.12.0:
     licensed:
-      declared: Other
+      declared: OTHER
   3.14.0:
     licensed:
       declared: OTHER
