--- a/curations/pypi/pypi/-/azureml-dataprep-rslex.yaml
+++ b/curations/pypi/pypi/-/azureml-dataprep-rslex.yaml
@@ -8,7 +8,7 @@ revisions:
       declared: OTHER
   1.1.1:
     licensed:
-      declared: Other
+      declared: OTHER
   1.2.0:
     licensed:
-      declared: Other
+      declared: OTHER
