--- a/curations/git/github/google/breakpad.yaml
+++ b/curations/git/github/google/breakpad.yaml
@@ -6,4 +6,4 @@ coordinates:
 revisions:
   5bba75bfd6ec386b8e3af0b91332388a378135bf:
     licensed:
-      declared: MIT
+      declared: BSD-3-Clause
