--- a/curations/nuget/nuget/-/RazorEngine.yaml
+++ b/curations/nuget/nuget/-/RazorEngine.yaml
@@ -11,7 +11,7 @@ revisions:
       declared: Apache-2.0
   3.6.6:
     licensed:
-      declared: Apache-2.0
+      declared: MS-PL
   3.7.0:
     licensed:
       declared: Apache-2.0
