--- a/curations/pypi/pypi/-/sklearn-pandas.yaml
+++ b/curations/pypi/pypi/-/sklearn-pandas.yaml
@@ -5,7 +5,7 @@ coordinates:
 revisions:
   1.6.0:
     licensed:
-      declared: BSD-3-Clause
+      declared: Zlib and BSD-2-Clause
   1.7.0:
     licensed:
       declared: Zlib
