--- a/curations/nuget/nuget/-/WindowsAzure.Storage.yaml
+++ b/curations/nuget/nuget/-/WindowsAzure.Storage.yaml
@@ -11,7 +11,7 @@ revisions:
       declared: OTHER
   2.1.0.3:
     licensed:
-      declared: Other
+      declared: OTHER
   3.0.0:
     licensed:
       declared: Apache-2.0
