--- a/curations/git/github/unicode-org/icu.yaml
+++ b/curations/git/github/unicode-org/icu.yaml
@@ -6,4 +6,4 @@ coordinates:
 revisions:
   125e29d54990e74845e1546851b5afa3efab06ce:
     licensed:
-      declared: Unicode-DFS-2016 AND BSD-3-Clause AND BSD-2-Clause
+      declared: Unicode-DFS-2016
