--- a/curations/nuget/nuget/-/Moq.yaml
+++ b/curations/nuget/nuget/-/Moq.yaml
@@ -14,7 +14,7 @@ revisions:
       declared: BSD-3-Clause
   4.11.0-rc1:
     licensed:
-      declared: MIT
+      declared: BSD-3-Clause
   4.12.0:
     licensed:
       declared: BSD-3-Clause
