--- a/curations/nuget/nuget/-/Prism.PubSubEvents.yaml
+++ b/curations/nuget/nuget/-/Prism.PubSubEvents.yaml
@@ -5,7 +5,7 @@ coordinates:
 revisions:
   1.0.0:
     licensed:
-      declared: MIT
+      declared: OTHER
   1.1.2:
     licensed:
       declared: Apache-2.0
