--- a/curations/git/github/unicode-org/icu.yaml
+++ b/curations/git/github/unicode-org/icu.yaml
@@ -6,4 +6,4 @@ coordinates:
 revisions:
   e2d85306162d3a0691b070b4f0a73e4012433444:
     licensed:
-      declared: ICU
+      declared: Unicode-DFS-2016
