--- a/curations/go/golang/github.com%2Fhhatto/gorst.yaml
+++ b/curations/go/golang/github.com%2Fhhatto/gorst.yaml
@@ -7,4 +7,4 @@
     v0.0.0-20181029133204-ca9f730cac5b:
       licensed:
         declared:
-          - BSD-3-Clause
+          - BSD-3-Clause AND (GPL-2.0-or-later OR MIT)
