--- a/curations/git/github/libjpeg-turbo/libjpeg-turbo.yaml
+++ b/curations/git/github/libjpeg-turbo/libjpeg-turbo.yaml
@@ -15,7 +15,7 @@ revisions:
       declared: BSD-3-Clause AND IJG AND Zlib
   8162eddf041e0be26f5c671bb6528723c55fed9d:
     licensed:
-      declared: BSD-3-Clause
+      declared: BSD-3-Clause AND IJG AND Zlib
   ad8330af72aefe5f07f79f6922fb5aa9ed209d18:
     licensed:
       declared: BSD-3-Clause AND IJG AND Zlib
