--- a/curations/nuget/nuget/-/Microsoft.Spatial.yaml
+++ b/curations/nuget/nuget/-/Microsoft.Spatial.yaml
@@ -8,7 +8,7 @@ revisions:
       declared: MIT
   7.12.5:
     licensed:
-      declared: CC-BY-3.0 AND MIT
+      declared: MIT
   7.2.0:
     licensed:
       declared: MIT
