--- a/curations/nuget/nuget/-/wastorage.v140.yaml
+++ b/curations/nuget/nuget/-/wastorage.v140.yaml
@@ -14,7 +14,7 @@ revisions:
       declared: OTHER
   3.2.2:
     licensed:
-      declared: MS-PL
+      declared: OTHER
   4.0.0:
     licensed:
       declared: OTHER
