--- a/curations/nuget/nuget/-/Oracle.ManagedDataAccess.Core.yaml
+++ b/curations/nuget/nuget/-/Oracle.ManagedDataAccess.Core.yaml
@@ -14,7 +14,7 @@ revisions:
       declared: OTHER
   2.19.110:
     licensed:
-      declared: Apache-2.0
+      declared: OTHER
   2.19.31:
     licensed:
       declared: OTHER
