--- a/curations/nuget/nuget/-/Oracle.ManagedDataAccess.Core.yaml
+++ b/curations/nuget/nuget/-/Oracle.ManagedDataAccess.Core.yaml
@@ -17,7 +17,7 @@ revisions:
       declared: OTHER
   2.19.180:
     licensed:
-      declared: NONE
+      declared: OTHER
   2.19.31:
     licensed:
       declared: OTHER
