--- a/curations/nuget/nuget/-/Oracle.ManagedDataAccess.Core.yaml
+++ b/curations/nuget/nuget/-/Oracle.ManagedDataAccess.Core.yaml
@@ -26,7 +26,7 @@ revisions:
       declared: OTHER
   3.21.100:
     licensed:
-      declared: NONE
+      declared: OTHER
   3.21.4:
     licensed:
       declared: OTHER
