--- a/curations/npm/npmjs/@fluentui/react-icons-mdl2-branded.yaml
+++ b/curations/npm/npmjs/@fluentui/react-icons-mdl2-branded.yaml
@@ -48,7 +48,7 @@ revisions:
       declared: OTHER
   1.2.31:
     licensed:
-      declared: MS-PL
+      declared: OTHER
   1.2.5:
     licensed:
       declared: OTHER
