--- a/curations/git/github/etr/libhttpserver.yaml
+++ b/curations/git/github/etr/libhttpserver.yaml
@@ -6,4 +6,4 @@ coordinates:
 revisions:
   c9746044d4b5c849f2b484087e110dd2a6e55308:
     licensed:
-      declared: GPL-2.0-only
+      declared: LGPL-2.1-or-later
