--- a/curations/nuget/nuget/-/OPCFoundation.NetStandard.Opc.Ua.Core.yaml
+++ b/curations/nuget/nuget/-/OPCFoundation.NetStandard.Opc.Ua.Core.yaml
@@ -47,4 +47,4 @@ revisions:
       declared: GPL-2.0-only OR OTHER
   1.4.371.86:
     licensed:
-      declared: OTHER
+      declared: GPL-2.0-only OR OTHER
