--- a/curations/nuget/nuget/-/RequireJS.yaml
+++ b/curations/nuget/nuget/-/RequireJS.yaml
@@ -26,7 +26,7 @@ revisions:
       declared: MIT
   2.3.1:
     licensed:
-      declared: CC0-1.0
+      declared: MIT
   2.3.2:
     licensed:
       declared: MIT
