--- a/curations/go/golang/howett.net/plist.yaml
+++ b/curations/go/golang/howett.net/plist.yaml
@@ -12,4 +12,4 @@ revisions:
       declared: BSD-2-Clause-Views
   v1.0.0:
     licensed:
-      declared: BSD-3-Clause
+      declared: BSD-2-Clause-Views
