--- a/curations/nuget/nuget/-/WindowsAPICodePack.yaml
+++ b/curations/nuget/nuget/-/WindowsAPICodePack.yaml
@@ -5,7 +5,7 @@ coordinates:
 revisions:
   1.1.0:
     licensed:
-      declared: NONE
+      declared: MIT
   1.1.2:
     licensed:
       declared: MIT
