--- a/curations/maven/mavencentral/org.openjdk.jmh/jmh-generator-annprocess.yaml
+++ b/curations/maven/mavencentral/org.openjdk.jmh/jmh-generator-annprocess.yaml
@@ -27,7 +27,7 @@ revisions:
       declared: GPL-2.0-only WITH Classpath-exception-2.0
   '1.36':
     licensed:
-      declared: GPL-2.0-only
+      declared: GPL-2.0-only WITH Classpath-exception-2.0
   1.4.1:
     licensed:
       declared: GPL-2.0-only WITH Classpath-exception-2.0
