--- a/curations/git/github/c-ares/c-ares.yaml
+++ b/curations/git/github/c-ares/c-ares.yaml
@@ -21,4 +21,4 @@ revisions:
       declared: OTHER
   fddf01938d3789e06cc1c3774e4cd0c7d2a89976:
     licensed:
-      declared: MIT
+      declared: OTHER
