--- a/curations/maven/mavencentral/com.adobe.aem/aem-sdk-api.yaml
+++ b/curations/maven/mavencentral/com.adobe.aem/aem-sdk-api.yaml
@@ -9,4 +9,4 @@ revisions:
       declared: OTHER
   2023.5.11983.20230511T173830Z-230200:
     licensed:
-      declared: Apache-2.0
+      declared: OTHER
