--- a/curations/maven/mavencentral/org.jboss.metadata/jboss-metadata-web.yaml
+++ b/curations/maven/mavencentral/org.jboss.metadata/jboss-metadata-web.yaml
@@ -9,4 +9,4 @@ revisions:
       declared: LGPL-2.1-or-later
   15.1.0.Final:
     licensed:
-      declared: LGPL-2.1
+      declared: LGPL-2.1-or-later
