--- a/curations/maven/mavencentral/mysql/mysql-connector-java.yaml
+++ b/curations/maven/mavencentral/mysql/mysql-connector-java.yaml
@@ -60,7 +60,7 @@ revisions:
       declared: OTHER
   8.0.29:
     licensed:
-      declared: GPL-2.0-only
+      declared: OTHER
   8.0.30:
     licensed:
       declared: OTHER
