--- a/curations/git/github/net-snmp/net-snmp.yaml
+++ b/curations/git/github/net-snmp/net-snmp.yaml
@@ -6,4 +6,4 @@ coordinates:
 revisions:
   042fd31a969905553f1d43a0f67d23d3c8b77154:
     licensed:
-      declared: BSD-3-Clause
+      declared: BSD-3-Clause AND MIT AND MIT-CMU
