--- a/curations/nuget/nuget/-/CsvHelper.yaml
+++ b/curations/nuget/nuget/-/CsvHelper.yaml
@@ -35,7 +35,7 @@ revisions:
       declared: MS-PL OR Apache-2.0
   2.14.2:
     licensed:
-      declared: MS-PL
+      declared: MS-PL OR Apache-2.0
   2.15.0:
     licensed:
       declared: MS-PL OR Apache-2.0
@@ -50,10 +50,10 @@ revisions:
       declared: MS-PL OR Apache-2.0
   2.7.0:
     licensed:
-      declared: MS-PL
+      declared: MS-PL OR Apache-2.0
   2.8.2:
     licensed:
-      declared: MS-PL
+      declared: MS-PL OR Apache-2.0
   3.0.0-beta6:
     licensed:
       declared: MS-PL OR Apache-2.0
