--- a/curations/gem/rubygems/-/power_assert.yaml
+++ b/curations/gem/rubygems/-/power_assert.yaml
@@ -8,4 +8,4 @@ revisions:
       declared: Ruby OR BSD-2-Clause
   1.1.3:
     licensed:
-      declared: BSD-2-Clause
+      declared: Ruby OR BSD-2-Clause
