--- a/curations/git/github/dotnet/runtime.yaml
+++ b/curations/git/github/dotnet/runtime.yaml
@@ -66,7 +66,7 @@ revisions:
       declared: MIT AND OTHER
   ea9bfd213bd025db11ff7c8477d81ad822f53335:
     licensed:
-      declared: MIT
+      declared: MIT AND OTHER
   f27d33729518f5aa478aa818b7b4f54a4d50bef1:
     licensed:
       declared: MIT AND OTHER
