Added civetweb v1.16, spdlog v1.12.0

--- a/curations/git/github/civetweb/civetweb.yaml
+++ b/curations/git/github/civetweb/civetweb.yaml
@@ -13,3 +13,6 @@ revisions:
   eefb26f82b233268fc98577d265352720d477ba4:
     licensed:
       declared: MIT
+  d7ba35bbb649209c66e582d5a0244ba988a15159:
+    licensed:
+      declared: MIT
