--- a/curations/git/github/gabime/spdlog.yaml
+++ b/curations/git/github/gabime/spdlog.yaml
@@ -19,3 +19,6 @@ revisions:
   eb3220622e73a4889eee355ffa37972b3cac3df5:
     licensed:
       declared: MIT
+  7e635fca68d014934b4af8a1cf874f63989352b7:
+    licensed:
+      declared: MIT
