Added prometheus-cpp v1.1.0

--- a/curations/git/github/jupp0r/prometheus-cpp.yaml
+++ b/curations/git/github/jupp0r/prometheus-cpp.yaml
@@ -7,3 +7,6 @@ revisions:
   76470b3ec024c8214e1f4253fb1f4c0b28d3df94:
     licensed:
       declared: MIT
+  c9ffcdda9086ffd9e1283ea7a0276d831f3c8a8d:
+    licensed:
+      declared: MIT
