--- a/curations/nuget/nuget/-/Z.Expressions.Eval.yaml
+++ b/curations/nuget/nuget/-/Z.Expressions.Eval.yaml
@@ -344,7 +344,7 @@ revisions:
       declared: OTHER
   4.0.77:
     licensed:
-      declared: MIT
+      declared: OTHER
   4.0.82:
     licensed:
       declared: OTHER
