--- a/curations/nuget/nuget/-/OPCFoundation.NetStandard.Opc.Ua.Core.yaml
+++ b/curations/nuget/nuget/-/OPCFoundation.NetStandard.Opc.Ua.Core.yaml
@@ -53,4 +53,4 @@ revisions:
       declared: GPL-2.0-only OR OTHER
   1.4.372.56:
     licensed:
-      declared: OTHER
+      declared: GPL-2.0-only OR OTHER
