--- a/curations/npm/npmjs/@amcharts/amcharts4.yaml
+++ b/curations/npm/npmjs/@amcharts/amcharts4.yaml
@@ -18,7 +18,7 @@ revisions:
       declared: OTHER
   4.10.36:
     licensed:
-      declared: NONE
+      declared: OTHER
   4.5.3:
     licensed:
       declared: OTHER
